Display product step4

--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,9 @@
 			<%= p.description %>
 		</div>
 		<div>
-			<%= p.title %>
+			Size: <%= p.size %> cm
+		<div>
+			Price: <%= p.price %> rub
 		</div>
 	</div>
 	<% end %>
