--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,8 @@
 			<%= p.title %>
 		</div>
 		<div>
-			<img src="<%= p.path_to_image %>" />
-		</div>
+		  <img src="<%= p.path_to_image %>" /> 
+ 		</div>
 		<div>
 			<%= p.description %>
 		</div>
@@ -17,7 +17,10 @@
 			Size: <%= p.size %> cm
 		<div>
 			Price: <%= p.price %> rub
-		</div>
+ 		</div> 
+ 		<div>
+			<button class="btn btn-sm btn-success">Add to cart</button>
+ 		</div> 
 	</div>
 	<% end %>
 
