--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,8 @@
 			Price: <%= p.price %> rub
  		</div> 
  		<div>
-			<button class="btn btn-sm btn-success" onclick="add_to_cart()">Add to cart</button>
+			<button class="btn btn-sm btn-success" onclick="add_to_cart
+					(<%= p.id %>)">Add to cart</button>
  		</div> 
 	</div>
 	<% end %>
