--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,7 +37,10 @@
 			      <li><a href="/something">Something</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
 			    </ul>
-			  </div><!--/.nav-collapse -->
+			    <ul class="nav navbar-nav navbar-right">
+			    	<li><a href="#">Cart(...)</li>
+			    </ul>
+			   </div><!--/.nav-collapse -->
 			</nav>
 
 			<div>
