--- a/views/index.erb
+++ b/views/index.erb
@@ -7,17 +7,23 @@
 		<div>
 			<%= p.title %>
 		</div>
+		
 		<div>
 		  <img src="<%= p.path_to_image %>" /> 
  		</div>
+		
 		<div>
 			<%= p.description %>
 		</div>
+		
 		<div>
 			Size: <%= p.size %> cm
+		</div>
+
 		<div>
 			Price: <%= p.price %> rub
  		</div> 
+ 		
  		<div>
 			<button class="btn btn-sm btn-success" onclick="add_to_cart
 					(<%= p.id %>)">Add to cart</button>
@@ -29,5 +35,15 @@
 <br />
 <br />
 <button class="btn btn-primary" onclick="something()">Click me!</button>
+
+<script type="text/javascript">
+
+$(function(){
+
+	update_orders_input();
+
+});
+
+</script>
 
 
